<resources>
    <string name="app_name">Notes App</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="update">Update</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="log_out">Log out</string>
    <string name="last_edited">Last edited :</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
</resources>